修复SEO关键字及描述

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>LOL Skin | LOL英雄联盟免费换肤助手</title>
-    <meta name="keywords" content="#(SEO_KEYWORDS)">
-    <meta name="description" content="#(SEO_DESCRIPTION)">
+    <meta name="keywords" content="LOl Skin,LOL,英雄联盟,League of Legends,免费,换肤插件,换肤助手,自慰皮肤">
+    <meta name="description" content="LOL Skin,LOL免费换肤助手,免费换肤插件,自慰皮肤">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/bootstrap.min.css'>
